2007-12-10  John W. Eaton  <jwe@octave.org>

	* plot/fplot.m: In N is not specified, increase initial number of
	points from 3 and 5 to 5 and 8.

	* signal/detrend.m: Move tests here from test/test_signal.m.
	Loosen tolerance on first test from 10*eps to 20*eps.

	* finance/rate.m: Don't request info from fsolve.

2007-12-10  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/__line__.m: Pass initial property/value pairs to __go_line__.
	* plot/surface.m: Pass initial property/value pairs to __go_surface__.

2007-12-10  David Bateman  <dbateman@free.fr>

	* image/image.m: Rewritten to allow trailing properties to be
	passed to underlying image object.
	* image/__img__.m: Pass additional arguments to __go_image__.
	* plot/__patch__.m: Don't set clim, rely on autoscaling.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: If we have a grid, send "set grid
	front" to gnuplot.

2007-12-10  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Issue "set view map" for pcolor, and "set
	border front" from images.
	* plot/__go_draw_figure__.m: Issue "set autoscale fix" for gnuplot.
	* plot/pcolor.m: Set axis "box" property.
	* plot/title.m, plot/xlabel.m, plot/ylabel.m, plot/xlabel.m:
	Mark as commands.

2007-12-07  David Bateman  <dbateman@free.fr>

	* plot/surf.m: Don't set facecolor property.

2007-12-06  John W. Eaton  <jwe@octave.org>

	* plot/print.m: Pass mono to drawnow.
	* plot/drawnow.m: New arg, mono.  Pass it to __go_draw_figure__.
	* plot/__go_draw_figure__.m: New arg, mono.  Pass it to __go_draw_axes.
	* plot/__go_draw_axes__.m: New arg, mono.  If mono is true,
	disable color specifications.

	* general/issymmetric.m: Move tests here from test/test_number.m

2007-12-06  Jason Riedy  <ejr@cs.berkeley.edu>

	* general/issymmetric.m: To keep its argument sparse and the
	function quick, use the infinity norm rather than the 2-norm.
	Also measure the symmetric part rather than the Hermitian part.